Added initial version of 'posting' and 'view recent posts' features

--- a/Jaunt/client/index.html
+++ b/Jaunt/client/index.html
@@ -5,5 +5,12 @@
 </head>
 
 <body>
-    {{> header}} {{> footer}}
+    {{> header}}
+    <main class="container">
+        <section class="col-sm-12">
+            {{> post}} {{> timeline}}
+        </section>
+    </main>
+
+    {{> footer}}
 </body>
