--- a/Jaunt/client/index.html
+++ b/Jaunt/client/index.html
@@ -7,9 +7,7 @@
 <body>
     {{> header}}
     <main class="container">
-        <section class="col-sm-12">
-            {{> post}} {{> timeline}}
-        </section>
+        {{> home}}
     </main>
 
     {{> footer}}
