--- a/Jaunt/client/index.html
+++ b/Jaunt/client/index.html
@@ -1,4 +1,5 @@
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <title>
         Jaunt
     </title>
@@ -13,5 +14,5 @@
         {{> yield}}
     </main>
 
-    {{> footer}}    
+    {{> footer}}
 </template>
