Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
+          <h1>
+<a id="jaunt-social-network" class="anchor" href="#jaunt-social-network" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Jaunt-Social-Network</h1>
+
+<p>Jaunt is a social network inspired by Twitter that aims to make social interaction more fun and gratifying.</p>
+
+<h3>
 <a id="the-project-" class="anchor" href="#the-project-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Project .</h3>
 
 <p>Jaunt is an open-source social network project that focus in the interaction among users. The main objective of this project is to offer and easy of use and delightful plataform for final users that is also modular and easily edited by developers.</p>
@@ -42,11 +47,11 @@
 <a id="project-structure" class="anchor" href="#project-structure" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Project Structure</h3>
 
 <p>The project aims to be modular so developers can easily develop and integrate new features.
-The root project folder consists of:
-/client -&gt; here is where we can find all code related with client.
-/server -&gt; server code (database queries and so on).
-/public -&gt; assets to be used in the client (eg.: images).
-/model -&gt; database collections.</p>
+The root project folder consists of:<br>
+<b>/client</b> -&gt; here is where we can find all code related with client. <br>
+<b>/server</b> -&gt; server code (database queries and so on). <br>
+<b>/public</b> -&gt; assets to be used in the client (eg.: images). <br>
+<b>/model</b> -&gt; database collections. </p>
 
 <p>The content inside client is divided in a way that each feature has 3 files.
 eg: /leaderboard has a leaderboard.js that handles requests/events and provide data to the template. leaderboard.html is the template that defines how the data should be displayed. leaderboard.css styles the template.</p>
